--- a/config.json
+++ b/config.json
@@ -11,10 +11,11 @@
   "database": {
     "sequelize": {
         "name": "Database",
-        "username": "root",
+        "username": "jumba",
         "password": "test",
-        "host": "0.0.0.0",
-        "database": "accounts",
+        "host": "localhost",
+        "port": "3307",
+        "database": "jumba",
         "dialect": "mariadb"
     },
     "responseCache": {}
